Dev Remove Category logic
