# backend/controller/category.js
@@ -1,3 +1,4 @@
+const { isValidObjectId } = require("mongoose");
 const { errorResponse, successResponse } = require("../helper/responses");
 const categoryModel = require("./../model/category");
 
@@ -35,6 +36,30 @@ exports.getAllCategories = async (req, res, next) => {
     }
 
     return successResponse(res, 200, { categories });
+  } catch (err) {
+    next(err);
+  }
+};
+
+exports.removeCategory = async (req, res, next) => {
+  try {
+    const { categoryId } = req.params;
+    if (!isValidObjectId(categoryId)) {
+      return errorResponse(res, 400, {
+        nessage: "Category ObjectId not valid !!",
+      });
+    }
+
+    const findAndRemoveCategory = await categoryModel.findOneAndDelete({
+      _id: categoryId,
+    });
+    if (!findAndRemoveCategory) {
+      return errorResponse(res, 404, { message: "Category Not found" });
+    }
+
+    return successResponse(res, 200, {
+      message: "Category Removed successfully",
+    });
   } catch (err) {
     next(err);
   }
